--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "name": "pm-community",
   "builds": [
     {
-      "src": "index.html",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
