Fix: 파일 경로 문제 완전 해결 - HTML에서 모든 파일 경로를 상대경로(./)로 수정 - Vercel 배포 설정에서 각 파일을 명시적으로 지정 - 404 오류 및 JavaScript 로딩 문제 해결

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,27 @@
   "name": "pm-community",
   "builds": [
     {
-      "src": "**/*",
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "styles.css",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "script.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "board.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "firebase-config.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "pm-logo.jpg",
       "use": "@vercel/static"
     }
   ],
