Fix: 고정 도메인 설정 - pm-community.vercel.app 별칭 추가

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "pm-community",
+  "alias": ["pm-community.vercel.app"],
   "builds": [
     {
       "src": "index.html",
