--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,3 @@
 {
-  "version": 2,
-  "alias": ["pm-community.vercel.app"],
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "styles.css",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "script.js",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "board.js",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "firebase-config.js",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "pm-logo.jpg",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "alias": ["pm-community.vercel.app"]
 } 
